@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.010.
 use strict;
 use warnings;
 
@@ -17,7 +17,7 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.024",
   "NAME" => "CPAN::Testers::Backend",
   "PREREQ_PM" => {
-    "Beam::Minion" => 0,
+    "Beam::Minion" => "0.007",
     "Beam::Runner" => "0.013",
     "Beam::Wire" => "1.020",
     "CPAN::Testers::Report" => 0,
@@ -29,8 +29,9 @@ my %WriteMakefileArgs = (
     "JSON::MaybeXS" => 0,
     "Log::Any" => "1.046",
     "Metabase::User::Profile" => 0,
+    "Minion" => 8,
     "Minion::Backend::SQLite" => 0,
-    "Minion::Backend::mysql" => 0,
+    "Minion::Backend::mysql" => "0.11",
     "Sereal" => 0
   },
   "TEST_REQUIRES" => {
@@ -48,7 +49,7 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "Beam::Minion" => 0,
+  "Beam::Minion" => "0.007",
   "Beam::Runner" => "0.013",
   "Beam::Wire" => "1.020",
   "CPAN::Testers::Report" => 0,
@@ -64,8 +65,9 @@ my %FallbackPrereqs = (
   "JSON::MaybeXS" => 0,
   "Log::Any" => "1.046",
   "Metabase::User::Profile" => 0,
+  "Minion" => 8,
   "Minion::Backend::SQLite" => 0,
-  "Minion::Backend::mysql" => 0,
+  "Minion::Backend::mysql" => "0.11",
   "Sereal" => 0,
   "Test::More" => "1.001005"
 );
