@@ -1,4 +1,4 @@
-requires "Beam::Minion" => "0";
+requires "Beam::Minion" => "0.007";
 requires "Beam::Runner" => "0.013";
 requires "Beam::Wire" => "1.020";
 requires "CPAN::Testers::Report" => "0";
@@ -10,8 +10,9 @@ requires "Import::Base" => "0.012";
 requires "JSON::MaybeXS" => "0";
 requires "Log::Any" => "1.046";
 requires "Metabase::User::Profile" => "0";
+requires "Minion" => "8";
 requires "Minion::Backend::SQLite" => "0";
-requires "Minion::Backend::mysql" => "0";
+requires "Minion::Backend::mysql" => "0.11";
 requires "Sereal" => "0";
 requires "perl" => "5.024";
 
